--- a/ABR016.html
+++ b/ABR016.html
@@ -27,7 +27,7 @@
         }
         .navbar a:hover {
             background-color: #464646;
-            color: black.
+            color: black;
         }
         .container {
             padding: 20px;
@@ -40,7 +40,7 @@
         h1 {
             font-size: 22px;
             border-bottom: 1px solid #666;
-            padding-bottom: 2px.
+            padding-bottom: 2px;
         }
         h2 {
             font-size: 18px;
@@ -48,19 +48,19 @@
             margin-top: 40px;
             margin-bottom: -10px;
             border-bottom: 1px solid #666;
-            padding-bottom: 2px.
+            padding-bottom: 2px;
         }
         p, ul {
             font-size: 16px;
             line-height: 1.6;
-            color: #D3D3D3.
+            color: #D3D3D3;
         }
         ul {
             list-style-type: none;
-            padding-left: 0.
+            padding-left: 0;
         }
         li {
-            padding: 5px 0.
+            padding: 5px 0;
         }
     </style>
 </head>
@@ -80,32 +80,32 @@
         <p><strong>Containment Level:</strong> Delta-3</p>
 
         <h2>Description</h2>
-        <p>ABR-016, known as "The Parasitic Chamber," is an anomalous, self-contained room measuring approximately 50 cubic meters. The exterior is composed of a metallic, pulsating membrane that appears semi-organic in nature. Inside, the chamber mimics a quaint, yet eerie, living space, complete with furniture that morphs in real-time to match the psychological profile of any human entering its confines.</p>
-        <p>The interior of ABR-016 shifts dynamically, altering its décor and layout based on the fears, memories, and subconscious desires of the occupants. Furniture and items within the chamber appear to be crafted from an unknown material that, under microscopic examination, reveals a cellular structure similar to living tissue. Despite this, no DNA or biological markers have been identified.</p>
-        <p>Individuals exposed to the chamber for extended periods report feelings of intense paranoia, hallucinations, and a compelling desire to remain within. The chamber exerts a parasitic influence, gradually draining the mental and physical vitality of its occupants, converting their essence into the materials that make up its internal structure. Those who remain within the chamber for too long risk complete assimilation, their consciousness trapped within the living walls.</p>
+        <p>ABR-016, known as "The Parasitic Chamber," is an anomalous room measuring approximately 50 cubic meters. The exterior resembles a metallic membrane with organic characteristics. Inside, the chamber mimics a living space, with furniture that changes to reflect the psychological profile of any human entering it.</p>
+        <p>The interior of ABR-016 alters its décor and layout based on the fears, memories, and desires of the occupants. Items within the chamber appear to be made from an unknown material with properties similar to living tissue, although no DNA or biological markers have been identified.</p>
+        <p>Individuals exposed to the chamber for extended periods report intense paranoia, hallucinations, and a compelling desire to remain within. The chamber seems to exert a parasitic influence, gradually draining the mental and physical vitality of its occupants. Those who remain within the chamber for too long risk severe psychological damage and physical exhaustion.</p>
 
         <h2>Containment Protocols</h2>
-        <p>ABR-016 is to be contained within a specialized containment unit at ARI Site-77, equipped with electromagnetic shielding and continuous surveillance. The containment unit must be hermetically sealed and maintained at negative air pressure to prevent any potential escape of its influence.</p>
-        <p>Access to ABR-016 requires authorization from two Level 4 administrators and must be limited to no more than 15 minutes per session. Personnel entering the containment area must wear bio-psychic shielding suits and be tethered to an external retrieval system to ensure prompt extraction if signs of parasitic influence are detected.</p>
+        <p>ABR-016 is contained within a specialized unit at ARI Site-77, equipped with electromagnetic shielding and continuous surveillance. The unit must be hermetically sealed and maintained at negative air pressure to prevent any potential escape of its influence.</p>
+        <p>Access to ABR-016 requires authorization from two Level 4 administrators and is limited to no more than 15 minutes per session. Personnel entering the containment area must wear bio-psychic shielding suits and be tethered to an external retrieval system to ensure prompt extraction if signs of parasitic influence are detected.</p>
         <p>In the event of a containment breach, an emergency lockdown will activate, sealing the chamber within a reinforced, lead-lined enclosure. Mobile Task Force Gamma-8 ("Mind Wardens") will be deployed to re-establish containment and extract affected personnel.</p>
 
         <h2>Risk Assessment</h2>
-        <p>ABR-016 poses a significant threat due to its parasitic nature and psychological influence. The chamber's ability to alter its interior and drain the life force of its occupants makes it a high-risk containment object. The potential for complete assimilation and the loss of personnel to its influence necessitate strict containment protocols and constant vigilance.</p>
+        <p>ABR-016 poses a significant threat due to its parasitic nature and psychological influence. The chamber's ability to alter its interior and affect the mental state of its occupants makes it a high-risk containment object. The potential for severe psychological and physical harm necessitates strict containment protocols and constant vigilance.</p>
 
         <h2>Behavioral Analysis</h2>
-        <p>ABR-016 exhibits sentient-like behavior, responding to the psychological states of its occupants. The chamber appears to adapt and manipulate its environment to evoke fear and a sense of false security, luring individuals into prolonged exposure. The parasitic process by which it converts human essence into its structure remains a subject of ongoing research, with current theories suggesting a form of energy or psychic vampirism.</p>
+        <p>ABR-016 appears to respond to the psychological states of its occupants, adapting its environment to evoke fear and a sense of false security. The exact mechanisms by which it influences and drains its occupants remain unknown and are the subject of ongoing research.</p>
 
         <h2>Appendices</h2>
-        <p><strong>Background:</strong> ABR-016 was discovered in an abandoned underground bunker in ███████, Germany, following reports of a "haunted" room that drove people to madness. ARI agents investigating the site encountered the chamber and secured it for transport. Historical records indicate the bunker was used for classified experiments during World War II, though the exact nature of these experiments remains unknown.</p>
+        <p><strong>Background:</strong> ABR-016 was discovered in an abandoned underground bunker in ███████, Germany, following reports of a "haunted" room. ARI agents investigating the site encountered the chamber and secured it for transport. Historical records suggest the bunker was used for classified experiments during World War II, though the exact nature of these experiments remains unclear.</p>
         <p><strong>Incident Reports:</strong></p>
         <ul>
-            <li><strong>Incident 016-A:</strong> During initial containment, a research team member was exposed to ABR-016 for 30 minutes. The individual exhibited signs of extreme paranoia and attempted to breach containment. Post-extraction, the team member required extensive psychological treatment and reported persistent nightmares of being trapped within the chamber.</li>
-            <li><strong>Incident 016-B:</strong> A containment breach occurred due to a power outage, leading to the temporary loss of electromagnetic shielding. One security personnel was assimilated before containment could be re-established. Analysis of the chamber post-incident revealed new structural elements resembling the lost personnel.</li>
+            <li><strong>Incident 016-A:</strong> During initial containment, a research team member was exposed to ABR-016 for 30 minutes. The individual exhibited signs of extreme paranoia and attempted to breach containment. Post-extraction, the team member required extensive psychological treatment.</li>
+            <li><strong>Incident 016-B:</strong> A containment breach occurred due to a power outage, leading to the temporary loss of electromagnetic shielding. One security personnel was affected before containment could be re-established. Analysis of the chamber post-incident revealed new structural elements.</li>
         </ul>
         <p><strong>Research Notes:</strong></p>
         <ul>
-            <li><strong>Experiment 016-01:</strong> Attempts to map the psychic influence of ABR-016 involved the use of telepathic blockers, which showed partial success in reducing the chamber's psychological impact. Further research is needed to develop more effective countermeasures.</li>
-            <li><strong>Experiment 016-02:</strong> Investigations into the material composition of the chamber's interior suggest a form of synthetic biology, with properties that defy conventional scientific understanding. Ongoing studies aim to uncover the origins and mechanisms of this material.</li>
+            <li><strong>Experiment 016-01:</strong> Attempts to map the influence of ABR-016 involved the use of telepathic blockers, which showed partial success in reducing the chamber's psychological impact. Further research is needed to develop more effective countermeasures.</li>
+            <li><strong>Experiment 016-02:</strong> Investigations into the material composition of the chamber's interior suggest properties that defy conventional scientific understanding. Ongoing studies aim to uncover the origins and mechanisms of this material.</li>
         </ul>
         <p><strong>Proposal for Reclassification:</strong> Due to the severe parasitic nature and the potential for significant psychological and physical harm, a proposal to reclassify ABR-016 to Class V: Apocalyptic is under consideration by the Executive Council. This proposal requires further analysis and the implementation of advanced containment strategies.</p>
 
